Monospaced digits toggle.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -77703,6 +77703,9 @@
         }
       }
     },
+    "Monospaced digits" : {
+
+    },
     "Mouth" : {
       "localizations" : {
         "de" : {
