Browser title in text widget.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -108530,6 +108530,9 @@
         }
       }
     },
+    "Show browser title" : {
+
+    },
     "Show city" : {
       "localizations" : {
         "de" : {
