Face tracking continued.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -141825,6 +141825,9 @@
         }
       }
     },
+    "Video source widget track face" : {
+
+    },
     "Video stabilization" : {
       "localizations" : {
         "de" : {
