Optional chat messages on bot command execution.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -5727,7 +5727,7 @@
         }
       }
     },
-    "%@, thanks for bringing my photo album to life. 🎉" : {
+    "%@, thanks for bringing our photo album to life. 🎉" : {
 
     },
     "%lld %%" : {
