Print snapshots toggle.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -92629,6 +92629,9 @@
         }
       }
     },
+    "Print snapshots" : {
+
+    },
     "Print when the app is in background mode." : {
       "localizations" : {
         "de" : {
