--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -68354,6 +68354,9 @@
         }
       }
     },
+    "Launch live stream" : {
+
+    },
     "Leading" : {
       "localizations" : {
         "de" : {
@@ -84293,6 +84296,9 @@
           }
         }
       }
+    },
+    "No launch live stream configured" : {
+
     },
     "No preview received yet." : {
       "localizations" : {
