--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -62941,6 +62941,9 @@
         }
       }
     },
+    "HERO 12/13" : {
+
+    },
     "Hide sensitive URL" : {
       "localizations" : {
         "de" : {
